--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   },
