--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid": "^6.16.1",
@@ -22,7 +23,8 @@
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
