--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid": "^6.16.1",
     "@mui/x-data-grid-generator": "^6.16.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.27",
     "next": "13.5.4",
     "react": "^18",
