--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
     "@mui/x-data-grid-generator": "^6.16.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.27",
+    "autoprefixer": "^9.8.8",
     "next": "13.5.4",
+    "postcss": "^7.0.39",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
-    "postcss": "^8",
     "typescript": "^5"
   }
 }
